admin dashboard updated with live data

--- a/templates/employee_dashboard.html
+++ b/templates/employee_dashboard.html
@@ -16,7 +16,8 @@
         }
 
         .hero {
-            background-color: #4CAF50;
+            /* background-color: #4CAF50; */
+            background-color: #343a40ce;
             color: white;
             padding: 50px 20px;
             text-align: center;
