--- a/templates/index.html
+++ b/templates/index.html
@@ -56,11 +56,13 @@
             align-items: center;
             text-align: center;
             height: 90vh;
-            /* background: url(' 'img/hero-bg.jpg}') no-repeat center center/cover; */
+            background: url("{{ url_for('static', filename='images/background-image.png') }}") no-repeat center center ;
+            background-size: cover;
+            backdrop-filter: blur(10px);
             color: white;
             position: relative;
+            overflow: hidden;
         }
-
         .hero::before {
             content: '';
             position: absolute;
@@ -69,11 +71,12 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.5);
+            z-index: -1; 
         }
 
         .hero-content {
             position: relative;
-            z-index: 1;
+            z-index: 2; 
         }
 
         .hero h1 {
@@ -158,7 +161,6 @@
             <h1>Track Productivity, Boost Efficiency</h1>
             <p>Real-time monitoring of employee activities with seamless data visualization.</p>
             <div class="hero-buttons">
-                <!-- <a href="/login" class="btn">Employee Login</a> -->
                 <a href="/manual-login" class="btn">Employee Login</a>
                 <a href="/admin-login" class="btn">Admin Login</a>
             </div>
