--- a/templates/employee_dashboard.html
+++ b/templates/employee_dashboard.html
@@ -35,7 +35,7 @@
 
         .btn {
             padding: 10px 20px;
-            background-color: #FF5722;
+            background-color: #dc3545;
             color: white;
             border: none;
             cursor: pointer;
