removed active logs

--- a/templates/employee_dashboard.html
+++ b/templates/employee_dashboard.html
@@ -215,14 +215,14 @@
         </div>
 
         <!-- Activity Logs -->
-        <section class="log-container">
+        <!-- <section class="log-container">
             <h2>Activity Logs</h2>
             <ul id="log-list">
                 {% for log in logs %}
                 <li>{{ log.log_time }} : {{ log.event }}</li>
                 {% endfor %}
             </ul>
-        </section>
+        </section> -->
     </div>
 
     <!-- Modal for Meeting Details -->
