--- a/templates/employee_list.html
+++ b/templates/employee_list.html
@@ -108,6 +108,8 @@
             <li><a href="/register-employee">Add Employee</a></li>
             <li><a href="/remove-employee">Remove Employee</a></li>
             <li><a href="/employee_list">Employee List</a></li>
+            <li><a href="/analysis">Analysis</a></li>
+        </ul>
         </ul>
     </nav>
 
