--- a/templates/remove_employee.html
+++ b/templates/remove_employee.html
@@ -76,6 +76,7 @@
             <li><a href="/register-employee">Add Employee</a></li>
             <li><a href="/remove-employee">Remove Employee</a></li>
             <li><a href="/employee_list">Employee List</a></li>
+            <li><a href="/analysis">Analysis</a></li>
         </ul>
     </nav>
 
