--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar">
-        <div class="brand">Employee Monitoring System</div>
+        <div class="brand">System for Employee Productivity Monitoring and Analysis</div>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
